# Your-Agent-FineTuning-Application

./: .gitignore  Just_Your_Agent.py  README.md  gptFtExplo.py  output_train.jsonl  pyproject.toml
data/database/: mongoscripts.py  schemas.py
data/metrics/: test.csv
data/openai_ready/: output.jsonl  output_test.jsonl  output_train.jsonl  output_valid.jsonl
justai/: __init__.py  data_openai_analysis.py  dataset.py  openai_finetuning.py
justai/application/: dtos.py  exceptions.py  validations.py
justai/entities/: agent.py  conversation.py  feedback.py  user.py
justai/frameworks_and_drivers/: __init__.py  database_sidebar.py  (+3 more)
old/: fineTuningfunctions.py  finetuningExplorationOld.py
pages/: 1_I-_Import_and_Format_a_Dataset.py  1_I-a-_CRUD_Private_Dataset_Manual.py  1_I-b-_CRUD_Private_Dataset_Generative.py  1_import_and_format_a_dataset.py  1_👥_Manage_Users.py  2_II-_Import_and_Format_a_Dataset.py  2_II-b-_CRUD_Private_Dataset_Generative.py  2_table_display_of_dataset.py  2_🥷_Manage_Agents.py  3_III-_Manage_Fine_Tuning.py  3_openai_finetuning_ds_utilitites.py  3_💬_Manage_Conversations.py  4_IV-Test_The_Chatbot.py  4_IV-_Visualise_Datasets_in_a_Table.py  4_Test_Audio  4_🌀_AI_Conversation_Generator.py  5_Test_The_Chatbot.py  5_V-_CRUD_Private_Dataset.py  5_V-a-_CRUD_Private_Dataset_Manual.py  5_⬇️_Import_and_Format_a_Dataset.py  5_🤖_Chatbot.py  6_V-b-_CRUD_Private_Dataset_Generative.py  8_🔧_Manage_Fine_Tuning.py  8_🤖_Chatbot.py  9_📩_Feedback.py  DEPRECATED Chatbot.py  DEPRECATED🤯_Assistant_Chat!.py  Extra:_Test_Audio.py  chat_display_of_dataset.py
(+19 files in other folders)
