[tool.poetry]
name = "justai"
version = "0.1.0"
description = ""
authors = ["naayem <vincentnaayem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
streamlit = "^1.26.0"
tiktoken = "^0.5.1"
openai = "^0.28.0"
streamlit-audiorecorder = "^0.0.3.post1"
streamlit-audiorec = "^0.1.3"
langchain = "^0.0.302"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
